# llm-primitives-rs

./: Cargo.toml  README.md
examples/binary_classify/: main.rs
examples/classify/: main.rs
examples/generate_text/: main.rs
examples/parse/: main.rs
examples/score/: main.rs
src/: lib.rs  main.rs
